--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <div class="header">
         <div class="container">
             <div class="header__left">
-                <div class="logo"></div>
+                <div class="logo">
+                    <div class="logo__picture">
+                    <img class="logo" src="./assets/svg/logo.svg" alt=""></div>
+                </div>
                 <div class="nav">
                     <div class="nav__item">Home</div>
                     <div class="nav__item">Blog</div>
