--- a/index.html
+++ b/index.html
@@ -11,24 +11,31 @@
     <div class="header">
         <div class="container">
             <div class="header__left">
-                <div class="logo">
-                    <div class="logo__picture">
-                    <img class="logo" src="./assets/svg/logo.svg" alt=""></div>
-                </div>
+                <a href="#" class="logo">
+                    <img class="logo" src="./assets/svg/logo.svg" width="26" height="26" alt="logo img was stolen sry">
+                </a>
                 <div class="nav">
-                    <div class="nav__item">Home</div>
-                    <div class="nav__item">Blog</div>
-                    <div class="nav__item">Features</div>
-                    <div class="nav__item">Pricing</div>
-                    <div class="nav__item">Documentation</div>
+                    <a href="#" class="nav__item nav-item--active">Home</a>
+                    <a href="#" class="nav__item">Blog</a>
+                    <a href="#" class="nav__item">Features</a>
+                    <a href="#" class="nav__item">Pricing</a>
+                    <a href="#" class="nav__item">Documentation</a>
                 </div>
             </div>
             <div class="header__right">
                 <div class="socials">
-                    <div class="socials__item"></div>
-                    <div class="socials__item"></div>
-                    <div class="socials__item"></div>
-                    <div class="socials__item"></div>
+                    <a href="#" class="socials__item">
+                        <img class="socials__item" src="./assets/svg/facebook.svg" width="10" height="18" alt="facebook">
+                    </a>
+                    <a href="#" class="socials__item">
+                        <img class="socials__item" src="./assets/svg/telegram.svg" width="16" height="14" alt="telegram">
+                    </a>
+                    <a href="#" class="socials__item">
+                        <img class="socials__item" src="./assets/svg/twitter.svg" width="18" height="14" alt="twitter">
+                    </a>
+                    <a href="#" class="socials__item">
+                        <img class="socials__item" src="./assets/svg/medium.svg" width="18" height="14" alt="medium">
+                    </a>
                 </div>
                 <button class="btn btn--primary">Get started</button>
             </div>
