added breakpoint and mobile version

--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
         <div class="container">
             <div class="header__left">
                 <a href="#" class="logo">
-                    <img class="logo" src="./assets/svg/logo.svg" width="26" height="26" alt="logo img was stolen sry">
+                    <img src="./assets/svg/logo.svg" width="26" height="26" alt="logo img was stolen sry">
                 </a>
+                <div class="burger burger--open">
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                </div>
                 <div class="nav">
                     <a href="#" class="nav__item nav-item--active">Home</a>
                     <a href="#" class="nav__item">Blog</a>
