added svg repository and tried to link svg from this file to project

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
+
 <body>
     <div class="header">
         <div class="container">
@@ -30,7 +31,9 @@
             <div class="header__right">
                 <div class="socials">
                     <a href="#" class="socials__item">
-                        <img class="socials__item" src="./assets/svg/facebook.svg" width="10" height="18" alt="facebook">
+                        <svg class="icon">
+                            <use xlink:href="sprite.svg#facebook"></use>
+                        </svg>
                     </a>
                     <a href="#" class="socials__item">
                         <img class="socials__item" src="./assets/svg/telegram.svg" width="16" height="14" alt="telegram">
