--- a/index.html
+++ b/index.html
@@ -31,23 +31,57 @@
             <div class="header__right">
                 <div class="socials">
                     <a href="#" class="socials__item">
-                        <svg class="icon">
-                            <use xlink:href="sprite.svg#facebook"></use>
+                        <svg class="icon icon--facebook" width="10" height="18">
+                            <use xlink:href="#facebook"></use>
                         </svg>
                     </a>
                     <a href="#" class="socials__item">
-                        <img class="socials__item" src="./assets/svg/telegram.svg" width="16" height="14" alt="telegram">
+                        <svg class="icon icon--telegram" width="16" height="14">
+                            <use xlink:href="#telegram"></use>
+                        </svg>
                     </a>
                     <a href="#" class="socials__item">
-                        <img class="socials__item" src="./assets/svg/twitter.svg" width="18" height="14" alt="twitter">
+                        <svg class="icon icon--twitter" width="18" height="14">
+                            <use xlink:href="#twitter"></use>
+                        </svg>
                     </a>
                     <a href="#" class="socials__item">
-                        <img class="socials__item" src="./assets/svg/medium.svg" width="18" height="14" alt="medium">
+                        <svg class="icon icon--medium" width="18" height="14">
+                            <use xlink:href="#medium"></use>
+                        </svg>
                     </a>
                 </div>
                 <button class="btn btn--primary">Get started</button>
             </div>
         </div>
     </div>
+
+    <svg xmlns="http://www.w3.org/2000/svg">
+        <symbol id="facebook" viewBox="0 0 10 18">
+            <g>
+                <path fill="currentColor" d="M6.49091 18V9.78933H9.43919L9.88066 6.58948H6.49091V4.54658C6.49091 3.62016 6.76612 2.98882 8.18732 2.98882L10 2.98808V0.126118C9.6865 0.0871227 8.61048 -1.75745e-08 7.35861 -1.75745e-08C4.74512 -1.75745e-08 2.95585 1.4912 2.95585 4.22969V6.58948H-2.68589e-08V9.78933H2.95585V18H6.49091Z"/>
+            </g>
+        </symbol>
+        <symbol id="telegram" viewBox="0 0 17 15">
+            <g>
+                <path d="M6.31018 14.0994C5.83352 14.0994 5.91451 13.9117 5.75012 13.4382L4.34839 8.62552L15.1383 1.94772" fill="#9399AB"/>
+                <path d="M6.3103 14.0994C6.67814 14.0994 6.84066 13.9239 7.04598 13.7157L9.00777 11.7256L6.56068 10.1862" fill="#70788E"/>
+                <path d="M6.56032 10.1866L12.4898 14.7568C13.1665 15.1463 13.6548 14.9446 13.8234 14.1014L16.237 2.23585C16.4841 1.20229 15.8593 0.733512 15.212 1.04009L1.03929 6.74129C0.0718696 7.1461 0.0775095 7.70916 0.862951 7.96005L4.5 9.1443L12.9201 3.60248C13.3176 3.35102 13.6825 3.48621 13.383 3.76345" fill="#B6BAC7"/>
+            </g>
+        </symbol>
+        <symbol id="twitter" viewBox="0 0 19 15">
+            <g>
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M18.5226 1.86597C17.8602 2.14752 17.1487 2.33701 16.4019 2.42315C17.1641 1.98548 17.7497 1.29265 18.0253 0.467386C17.3118 0.872481 16.5215 1.16668 15.6802 1.32522C15.0069 0.638576 14.0469 0.210602 12.9849 0.210602C10.9458 0.210602 9.29207 1.7933 9.29207 3.74475C9.29207 4.02199 9.32442 4.2917 9.3877 4.55037C6.31814 4.40232 3.59676 2.99459 1.77567 0.857408C1.45785 1.37959 1.27574 1.98629 1.27574 2.6339C1.27574 3.85996 1.92768 4.9416 2.91824 5.57589C2.31356 5.55705 1.74374 5.39824 1.24593 5.13311V5.17752C1.24593 6.89076 2.51999 8.31869 4.20749 8.64371C3.89812 8.72446 3.57187 8.76753 3.23634 8.76753C2.9984 8.76753 2.76665 8.74599 2.54165 8.70427C3.01134 10.1088 4.3754 11.1305 5.99118 11.1591C4.72724 12.1065 3.13481 12.6718 1.40399 12.6718C1.10587 12.6718 0.812525 12.6556 0.523682 12.6225C2.15774 13.6254 4.09921 14.2106 6.18454 14.2106C12.9767 14.2106 16.6913 8.82459 16.6913 4.15456C16.6913 4.00113 16.6877 3.84905 16.6806 3.69698C17.4023 3.19902 18.0287 2.5759 18.5237 1.86665" fill="currentColor"/>
+            </g>
+        </symbol>
+        <symbol id="medium" viewBox="0 0 19 15">
+            <g>
+                <path d="M18.49 2.27379H17.7781C17.5138 2.27379 17.14 2.64837 17.14 2.88818V11.5801C17.14 11.8202 17.5138 12.1475 17.7781 12.1475H18.49V14.2106H12.04V12.1475H13.39V3.01063H13.3238L10.1713 14.2106H7.7306L4.61874 3.01063H4.53999V12.1475H5.88999V14.2106H0.48999V12.1475H1.18146C1.46622 12.1475 1.83999 11.8202 1.83999 11.5801V2.88818C1.83999 2.64837 1.46622 2.27379 1.18146 2.27379H0.48999V0.210632H7.24245L9.45941 8.3159H9.5204L11.7579 0.210632H18.49V2.27379Z" fill="currentColor"/>    
+            </g>
+        </symbol>
+        
+    </svg>
+
+
 </body>
 </html>
