--- a/index.html
+++ b/index.html
@@ -55,7 +55,19 @@
             </div>
         </div>
     </div>
-
+    <div class="hero">
+        <div class="hero__content">
+            <span class="subtitle">PLAN YOUR LIFE</span>
+            <h1 class="title">Increase your <b>productivity</b></h1>
+            <p class="description">Brute laoreet efficiendi id his, ea illum nonumes luptatum pro. Usu atqui laudem an, insolens gubergren similique est cu. Et vel modus congue vituperata.</p>
+            <button class="btn btn--play"></button>
+        </div>
+        <div class="hero__navigation">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </div>
     <svg xmlns="http://www.w3.org/2000/svg">
         <symbol id="facebook" viewBox="0 0 10 18">
             <g>
